# cholla

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .git-blame-rev-ignore-revs  .gitignore  .gitmodules  .mpi_routines.cpp.swp  .nfs00000000064c037c00000007  0.h5  1.h5  128.sh  128.txt  128cu.sh  256.sh  256cu.sh  256p.sh  :wq  CMakeLists.txt  CTU_1D.cpp  CTU_1D.h  CTU_1D_cuda.cu  CTU_1D_cuda.h  CTU_2D.h  CTU_2D_cuda.cu  CTU_3D.cpp  CTU_3D.h  CTU_3D_cuda.cu  CTU_3D_cuda.h  Jenkinsfile  MPI_Comm_node.c  MPI_Comm_node.h  MW_1024.txt  MW_input.txt  Makefile  Makefile.in  Makefile_FOM.sh  Makefile_cosmo.sh  Makeoptions  Makeoptions.in  README.md  (+145 more)
.github/workflows/: build_and_lint.yml  build_tests.yml  code_formatting.yml  cpp-lint.yml
.hg/: dirstate  dirstate (Evan’s MacBook Pro's conflicted copy 2015-05-05)  hgrc  last-message (Evan’s MacBook Pro's conflicted copy 2015-05-05).txt  last-message.txt  undo (Evan’s MacBook Pro's conflicted copy 2015-05-05).desc  undo (Evan’s MacBook Pro's conflicted copy 2015-05-05).dirstate  undo.desc  undo.dirstate
.hg/cache/: branch2-base  branch2-served  branchheads-served  tags
.hg/store/: 00changelog (Evan’s MacBook Pro's conflicted copy 2015-05-05).i  00changelog.i  00manifest (Evan’s MacBook Pro's conflicted copy 2015-05-05).i  00manifest.i  fncache  fncache (Evan’s MacBook Pro's conflicted copy 2015-05-05)  phaseroots  undo  undo (Evan’s MacBook Pro's conflicted copy 2015-05-05)
.sass-cache/15d53c05b7a944e18bb9dcb71b491790f4630b3a/: _base-buttons.scssc  _base-forms.scssc  _base-reset.scssc  _base-typography.scssc  _buttons-blue.scssc  _colors.scssc  (+5 more)
_includes/: ajaxify_content_form.html  header.html  navigation.html  profile.html
_layouts/: center.html  default.html
_posts/: 2015-09-22-Welcome.md  2015-09-22-welcome-to-cholla.markdown  2016-04-10-Version-1.md
_site/: 404.html  feed.xml  index.html  robots.txt  sitemap.xml
autom4te.cache/: output.0  requests  traces.0
builds/: check.sh  machine.sh  make.host.c3po  make.host.crc  make.host.frigg  make.host.frontier  make.host.github  make.host.lockhart  make.host.lux  make.host.poplar  make.host.poplar.aomp  make.host.poplar.cce+hip  make.host.shamrock  make.host.spock  make.host.summit  make.host.tornado  make.inc.template  make.type.FOM  make.type.MS  make.type.basic_scalar  make.type.cloudy  make.type.cooling  make.type.cosmology  make.type.debug_disk  make.type.disk  make.type.dust  make.type.gpu_hydro  make.type.gravity  make.type.hydro  make.type.m82  make.type.mhd  make.type.particles  make.type.rot_proj  make.type.rt  make.type.rt+gravity  make.type.starblast  make.type.starblast-noDE  make.type.static_grav  make.type.supernova  prereq.sh  (+17 more)
cloud-wind/: cloud-wind.txt
examples/: sample.txt
extras/: input_power_spectrum.txt  input_power_spectrum_lcdm.txt  makefie_lux.sh  makefie_shamrock.sh  makefie_summit.sh  makefie_summit_fom.sh  makefie_tornado.sh  makefile.summit  parameters_cosmological_ics.txt  submit_job_lux  submit_job_summit.lsf  uvb_rates_V22.txt
extras_twhite/: amake-paris-hipfft.sh  amake-paris-pfft.sh  amake-paris.sh  arun-paris-hipfft.sh  arun-paris-pfft.sh  arun-paris.sh  make-cufft.sh  make-pfft.sh  nmake-paris-cufft.sh  nmake-paris-pfft.sh  nmake-paris.sh
machines/: make.host.summit  make.inc.summit  prereq.sh
python_scripts/: Projection_Slice_Tutorial.ipynb  README.md  cat.py  cat_dset_3D.py  cat_particles.py  cat_projection.py  cat_rotated_projection.py  cat_slice.py  combine_hydro_particles.py  compare_snapshots.py  compress_snapshots.py  concat_2d_data.py  concat_3d_data.py  concat_internals.py  concat_particles.py  dask_distributed_template.py  dask_single_machine_template.py  data_compress_grid.py  data_compress_particles.py  io_tools.py  load_cholla_snapshot.py  load_cholla_snapshot_distributed.py  move_files.py  numdiff.py  plot_sod.py  tools.py
scale_output_files/: cosmo_outputs_high_redshift.txt  cosmo_outputs_z_6_0_100.txt  outputs_aLin_100.txt  outputs_cool_UV.txt  outputs_cool_UV_10.txt  outputs_cool_UV_28.txt  outputs_cool_uv_enzo_128_50Mpc.txt  outputs_cool_uv_enzo_128_50Mpc_HLLC_grav4.txt  outputs_cool_uv_enzo_256_100Mpc.txt  outputs_cool_uv_enzo_256_50Mpc.txt  outputs_cool_uv_enzo_256_50Mpc_HLLC_grav4.txt  outputs_cosmo_140_z_1_0.txt  outputs_cosmo_15.txt  outputs_cosmo_2048.txt  outputs_cosmo_2048_z0.txt  outputs_cosmo_310_spilt_z_by_thirds_15_6_2.5_1.txt  outputs_cosmo_aLin_200.txt  outputs_cosmo_aLin_400.txt  outputs_cosmo_analysis_150.txt  outputs_cosmo_analysis_56.txt  outputs_cosmo_analysis_94.txt  outputs_cosmo_crocs.txt  outputs_cosmo_crocs_dmo.txt  outputs_cosmo_high_z_6.txt  outputs_cosmo_pk_boera.txt  outputs_cosmo_puchwein.txt  outputs_cosmo_testing.txt  outputs_cosmo_testing_14.txt  outputs_cosmo_z_100_0_200.txt  outputs_dm.txt  outputs_dm_enzo_128_50Mpc.txt  outputs_dm_enzo_256_50Mpc.txt  outputs_dm_enzo_256_50Mpc_expansion0.01.txt  outputs_dm_enzo_256_50Mpc_grav4.txt  outputs_dm_nyx_100Mpc.txt  outputs_dm_nyx_256_50Mpc.txt  outputs_dm_nyx_256_50Mpc_0.txt  outputs_dm_nyx_50Mpc.txt  outputs_dm_ramses_128_50Mpc.txt  outputs_dm_ramses_256_50Mpc.txt  (+37 more)
src/: .flux_correction.cpp.swp  CTU_1D_cuda.cu  CTU_1D_cuda.h  CTU_2D.cpp  CTU_2D_cuda.cu  CTU_2D_cuda.h  CTU_3D.cpp  CTU_3D_cuda.cu  CTU_3D_cuda.h  Makefile  Makefile.in  Simple_3D_cuda.cu  Simple_3D_cuda.h  VL_1D_cuda.cu  VL_1D_cuda.h  VL_2D_cuda.cu  VL_2D_cuda.h  VL_3D_cuda.cu  VL_3D_cuda.h  boundary_conditions.cpp  boundary_conditions_cuda.cu  boundary_conditions_cuda.cuh  cholla  cloudy_coolingcurve.txt  cloudy_coolingcurve_lowT.txt  cooling_cpu.cpp  cooling_cpu.h  cooling_cuda.cu  cooling_cuda.h  cooling_wrapper.cu  cooling_wrapper.h  cuda_mpi_routines.cu  cuda_pack_buffers.cu  cuda_pack_buffers.cu~  cuda_pack_buffers.h  disk_ICs.cpp  disk_ICs_isothermal.cpp  dual_energy_CPU.cpp  error_check_cuda.cu  exact.cpp  (+90 more)
tests/: sample.txt
tools/: analyze_tidy_checks.py  cholla-nv-compute-sanitizer.sh  clang-format_runner.sh  clang-tidy_runner.sh
win/: cholla.sln  cholla.vcxproj  cholla.vcxproj.filters  plot.py  profile1.py  win.sln  win.vcxproj  win.vcxproj.filters
(+889 files in other folders)
